# zk

./: Cargo.toml
src/: ark_qap.rs  diffie_hellman.rs  elliptic.rs  fiat_shamir.rs  keccak.rs  main.rs  merkle.rs  qap.rs  r1cs.rs  utils.rs
src/snark/: mod.rs
src/stark/: mimc.rs  mod.rs  prime_field.rs
