[package]
name = "zk"
version = "0.1.0"
authors = ["Filip Lazovic <lazoviccorp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustnomial = "0.3.2"
num-bigint = { version = "0.4", default-features = false }
num-integer = "0.1.44"
num-traits = "0.2"