[package]
name = "zk"
version = "0.1.0"
authors = ["Filip Lazovic <lazoviccorp@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustnomial = "0.3.2"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-bn254 = "0.3.0"
ark-std = "0.3.0"
ark-r1cs-std = "0.3.0"

tiny-keccak = { version = "2.0.2", features = ["keccak"] }

[features]
default = ["std"]
std = ["ark-std/std"]